about page, page grid system

--- a/src/app/_components/public/about/about.component.html
+++ b/src/app/_components/public/about/about.component.html
@@ -1,3 +1,20 @@
-<p>
-  about works!
-</p>
+<div class="page">
+  <div>
+    <h1 class="heading">About Us</h1>
+    <img src="assets/img/tanker.jpg" alt="Image of a drain tanker lorry">
+    <p>
+      Brsitol Faster Drains are your premier Bristol drain services provider. With a collective experience of over 60 years you can rest assured that our team of dedicated engineers will find the best and most cost effective way to solve your drainage problems.
+      Our fleet of fully equipped vans on most occasions will be able to remedy your blocked drain in one visit, saving you both time, money and inconvenience. All our units are fitted with internal high pressure jetting machines, drain rods, CCTV Cameras
+      for drain surveys and other essential equipment.
+    </p>
+    <p>
+      From your initial call to job completion, you will be guided through the process by our team of experienced staff.
+    </p>
+    <p>
+      We offer a 24/7 emergency call out service for blockages and for non-urgent calls a suitable time slot will be arranged to fit in with your requirements.
+    </p>
+    <p>
+      We offer a free quotation service for drain repairs, installations or re-location of existing services. We can also offer a quick quotation service by email providing photographic evidence can be provided.
+    </p>
+  </div>
+</div>
