--- a/src/app/_components/shared/nav/nav.component.html
+++ b/src/app/_components/shared/nav/nav.component.html
@@ -4,6 +4,12 @@
       [routerLinkActive]="['active']"
       [routerLinkActiveOptions]="{exact:true}"
     >
+      <a class="nav__link" [routerLink]="['/about']">About</a>
+    </li>
+    <li class="list__item nav__item"
+      [routerLinkActive]="['active']"
+      [routerLinkActiveOptions]="{exact:true}"
+    >
       <a class="nav__link" [routerLink]="['/services']">Services</a>
     </li>
     <li class="list__item nav__item"
