--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
-<app-header></app-header>
-<main class="w page">
-  <router-outlet></router-outlet>
+<div class="w">
+  <app-header></app-header>
+  <main>
+    <router-outlet></router-outlet>
+  </main>
   <app-policies></app-policies>
-</main>
-<app-footer></app-footer>
+  <app-footer></app-footer>
+</div>
