--- a/src/app/_components/admin/user/register/register.component.html
+++ b/src/app/_components/admin/user/register/register.component.html
@@ -10,6 +10,7 @@
           name="email"
           id="email"
           class="form__input"
+          placeholder="Email Address"
         />
       </div>
       <div class="form__row">
@@ -20,6 +21,7 @@
           type="password"
           name="password" 
           id="password"
+          placeholder="Password"
         />
       </div>
       <div class="form__row">
@@ -29,7 +31,8 @@
           [(ngModel)]="confirm"
           type="password"
           name="confirm"
-          id="confirm" 
+          id="confirm"
+          placeholder="Confirm Password"
         />
       </div>
       <div class="form__row">
