--- a/src/app/_components/admin/user/login/login.component.html
+++ b/src/app/_components/admin/user/login/login.component.html
@@ -1,12 +1,12 @@
 <div class="page">
   <form action="" class="form form--login">
     <div class="form__row">
-      <label for="" class="form__label">Login</label>
-      <input type="text" class="form__input">
+      <label for="email" class="form__label">Email</label>
+      <input [(ngModel)]="email" type="email" class="form__input" placeholder="Email Adderss">
     </div>
     <div class="form__row">
       <label for="" class="form__label">Password</label>
-      <input type="password" class="form__input">
+      <input [(ngModel)]="password" type="password" class="form__input" placeholder="Password">
     </div>
     <div class="form__row">
       <input type="submit" value="Login" class="button">
