--- a/src/app/_components/admin/user/register/register.component.html
+++ b/src/app/_components/admin/user/register/register.component.html
@@ -3,6 +3,28 @@
   <app-skewed-wrapper [full]="false">
     <form (submit)="register()" class="form form--register">
       <div class="form__row">
+        <label for="secondName" class="form__label">First Name</label>
+        <input
+          type="text"
+          [(ngModel)]="firstName"
+          name="firstName"
+          id="firstName"
+          class="form__input"
+          placeholder="First Name"
+        />
+      </div>
+      <div class="form__row">
+        <label for="secondName" class="form__label">First Name</label>
+        <input
+          type="text"
+          [(ngModel)]="secondName"
+          name="secondName"
+          id="secondName"
+          class="form__input"
+          placeholder="Second Name"
+        />
+      </div>
+      <div class="form__row">
         <label for="email" class="form__label">Email Address</label>
         <input
           type="email"
