--- a/src/app/_components/admin/user/login/login.component.html
+++ b/src/app/_components/admin/user/login/login.component.html
@@ -3,11 +3,11 @@
     <form action="" class="form form--login">
       <div class="form__row">
         <label for="email" class="form__label">Email</label>
-        <input [(ngModel)]="email" type="email" class="form__input" placeholder="Email Adderss">
+        <input [(ngModel)]="email" name="email" type="email" class="form__input" placeholder="Email Adderss">
       </div>
       <div class="form__row">
         <label for="" class="form__label">Password</label>
-        <input [(ngModel)]="password" type="password" class="form__input" placeholder="Password">
+        <input [(ngModel)]="password" name="password" type="password" class="form__input" placeholder="Password">
       </div>
       <div class="form__row">
         <input type="submit" value="Login" class="button">
