--- a/src/app/_components/admin/user/register/register.component.html
+++ b/src/app/_components/admin/user/register/register.component.html
@@ -14,14 +14,14 @@
         />
       </div>
       <div class="form__row">
-        <label for="secondName" class="form__label">First Name</label>
+        <label for="lastName" class="form__label">Last Name</label>
         <input
           type="text"
-          name="secondName"
-          [(ngModel)]="secondName"
-          id="secondName"
+          name="lastName"
+          [(ngModel)]="lastName"
+          id="lastName"
           class="form__input"
-          placeholder="Second Name"
+          placeholder="Last Name"
         />
       </div>
       <div class="form__row">
