Updated admin nav

--- a/src/app/_components/admin/admin-nav/admin-nav.component.html
+++ b/src/app/_components/admin/admin-nav/admin-nav.component.html
@@ -10,7 +10,7 @@
       <a class="nav__link" [routerLink]="['/admin/verify-testimonials']">Verify Testimonials</a>
     </li>
     <li class="list__item">
-      <a class="nave__link" [routerLink]="['/admin/add-admin-email']">Add Admin Email</a>
+      <a class="nav__link" [routerLink]="['/admin/add-admin-email']">Add Admin Email</a>
     </li>
   </ul>
 </nav>
