--- a/src/app/_components/shared/footer/footer.component.html
+++ b/src/app/_components/shared/footer/footer.component.html
@@ -1,4 +1,5 @@
 <footer class="footer">
   <app-nav class="nav nav--footer"></app-nav>
   <a [routerLink]="['/login']">Admin Login</a>
+  <button class="button button--primary" (click)="logOut()">Log Out</button>
 </footer>
