--- a/src/scss/modules/_page.scss
+++ b/src/scss/modules/_page.scss
@@ -15,6 +15,7 @@ $Page-Padding:			$Type-LineHeight;
 	// height: 100%;
 	min-height: $Page-MinHeight;
 	display: flex;
+	overflow: hidden;
 }
 
 // Elements
