--- a/src/app/_components/shared/phone-numbers/phone-numbers.component.html
+++ b/src/app/_components/shared/phone-numbers/phone-numbers.component.html
@@ -1,10 +1,13 @@
 <div class="phone">
   <a href="tel:+">
-    <!-- <h2 class="phone phone--primary>{{ info?.mainNumber }}</h2> -->
-      <h2 class="phone__number phone__number--primary">
+    <h2 class="phone__number phone__number--primary button">
+        <i class="icon icon--phone" role="img" aria-hidden="true"></i>
+        <span>{{ info?.mainNumber }}</span>
+      </h2>
+      <!-- <h2 class="phone__number phone__number--primary">
         <i class="icon icon--phone" role="img" aria-hidden="true"></i>
         <span>07817 514889</span>
-      </h2>
+      </h2> -->
   </a>
   <a href="tel:+">
     <!-- <h3>{{ info?.secondaryNumber }}</h3> -->
