--- a/src/app/_components/shared/header/header.component.html
+++ b/src/app/_components/shared/header/header.component.html
@@ -1,16 +1,16 @@
 <header class="header">
   <div class="header__top">
-    <div>
+    <div class="header__container">
       <a class="link" [routerLink]="['']">
         <h1 class="header__title">Bristol Faster Drains</h1>
       </a>
+      <app-phone-numbers></app-phone-numbers>
     </div>
-    <app-phone-numbers></app-phone-numbers>
+    <button class="header__menu-button" (click)="toggleMenu()" title="menu">
+      <i class="icon icon--menu" role="img" aria-hidden="true"></i>
+      <span class="visually-hidden">Menu</span>
+    </button>
   </div>
-  <button class="header__menu-button" (click)="toggleMenu()" title="menu">
-    <i class="icon icon--menu" role="img" aria-hidden="true"></i>
-    <span class="visually-hidden">Menu</span>
-  </button>
   <div class="header__nav" (window:resize)="screenWidth($event)">
       <app-nav class="nav nav--main" [(menuState)]="menuState" (menuStateChange)="this.menuState = $event"></app-nav>
   </div>
