Policies sidebar and home page

--- a/src/app/_components/public/home/home.component.html
+++ b/src/app/_components/public/home/home.component.html
@@ -3,6 +3,8 @@
       <div class="item">
           <header class="item__header">
               <h1 class="item__title">Bristol Faster Drains</h1>
+              <p class="item__strapline">Bristols premiere drain clearing experts</p>
+              <p class="item__strapline"><strong>24/7 Call Out</strong></p>
               <h2 class="item__sub-title">
                 <a href="tel:+">{{ info?.mainNumber }}</a></h2>
               <h2 class="item__sub-title">
