--- a/src/app/_components/shared/policies/policies.component.html
+++ b/src/app/_components/shared/policies/policies.component.html
@@ -1,15 +1,37 @@
-<aside class="">
+<aside class="policies">
   <div>
     <h1 class="policies__heading">We Provide</h1>
     <ul class="list list--policies">
-      <li class="list__item"><i class="tick">&#x2713;</i><span>Free site visits and quotations with no obligations.</span></li>
-      <li class="list__item"><i class="tick">&#x2713;</i><span>Years of experience with drainage and plumbing issues.</span></li>
-      <li class="list__item"><i class="tick">&#x2713;</i><span>24 hour drain emergency services, 7 days a week.</span></li>
-      <li class="list__item"><i class="tick">&#x2713;</i><span>Property buyers pre-purchase CCTV drainage surveys.</span></li>
-      <li class="list__item"><i class="tick">&#x2713;</i><span>No call out charges in Bristol and surrounding area.</span></li>
-      <li class="list__item"><i class="tick">&#x2713;</i><span>Residential, Commercial, Industrial and Domestic.</span></li>
-      <li class="list__item"><i class="tick">&#x2713;</i><span>Fast response time and affordable.</span></li>
-      <li class="list__item"><i class="tick">&#x2713;</i><span>Our work on drains is 100% guaranteed.</span></li>
+      <li class="list__item">
+        <i class="policies__tick">&#x2713;</i>
+        <span>Free site visits and quotations with no obligations.</span>
+      </li>
+      <li class="list__item">
+        <i class="policies__tick">&#x2713;</i><span>Years of experience with drainage and plumbing issues.</span></li>
+      <li class="list__item">
+        <i class="policies__tick">&#x2713;</i>
+        <span>24 hour drain emergency services, 7 days a week.</span>
+      </li>
+      <li class="list__item">
+        <i class="policies__tick">&#x2713;</i>
+        <span>Property buyers pre-purchase CCTV drainage surveys.</span>
+      </li>
+      <li class="list__item">
+        <i class="policies__tick">&#x2713;</i>
+        <span>No call out charges in Bristol and surrounding area.</span>
+      </li>
+      <li class="list__item">
+        <i class="policies__tick">&#x2713;</i>
+        <span>Residential, Commercial, Industrial and Domestic.</span>
+      </li>
+      <li class="list__item">
+        <i class="policies__tick">&#x2713;</i>
+        <span>Fast response time and affordable.</span>
+      </li>
+      <li class="list__item">
+        <i class="policies__tick">&#x2713;</i>
+        <span>Our work on drains is 100% guaranteed.</span>
+      </li>
     </ul>
   </div>
 </aside>
