fixed line height mixin

--- a/src/scss/_config/mixins/__index.scss
+++ b/src/scss/_config/mixins/__index.scss
@@ -4,7 +4,7 @@
 @import 'bg-svg';
 @import 'clip-path';
 @import 'flex';
-@import 'font-size';
+@import 'typography';
 @import 'padding';
 @import 'margins';
 @import 'visually-hidden'
