--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="w">
   <app-header></app-header>
-  <main>
-    <router-outlet></router-outlet>
-  </main>
-  <app-policies></app-policies>
-  <app-footer></app-footer>
+  <div class="w w--main">
+    <main>
+      <router-outlet></router-outlet>
+    </main>
+    <app-policies></app-policies>
+    <app-footer></app-footer>
+  </div>
 </div>
