--- a/src/scss/components/__index.scss
+++ b/src/scss/components/__index.scss
@@ -5,6 +5,7 @@
 @import 'link';
 @import 'list';
 @import 'loader';
+@import 'leaveTestimonial';
 @import 'nav';
 @import 'phone';
 @import 'skewed-bg';
