--- a/src/scss/components/_nav.scss
+++ b/src/scss/components/_nav.scss
@@ -59,12 +59,13 @@ $NAV-Font:		$Font-Headings;
 		flex-wrap: wrap;
 		.nav__item {
 			flex: 0 0 50%;
-			max-width: 50%;
+			width: 50%;
 		}
 	}
 }
 
 .nav--services {
+	color: $COLOR-Primary;
 	@include padding-x($Type-LineHeight);
 }
 
@@ -78,7 +79,16 @@ $NAV-Font:		$Font-Headings;
 ///////////////////////////
 @include media($BP-Med) {
 	.nav--footer {
-		width: 50%;
+		.nav__links {
+			width: 280px;
+			display: flex;
+			flex-direction: row;
+			flex-wrap: wrap;
+			.nav__item {
+				width: 50%;
+				@include padding-y($Type-LineHeight / 4);
+			}
+		}
 	}
 }
 @include media($BP-Large) {
@@ -102,9 +112,9 @@ $NAV-Font:		$Font-Headings;
 
 	
 	
-	.nav--footer {
-		width: 25%;
-	}
+	// .nav--footer {
+	// 	width: 25%;
+	// }
 	
 	.nav--services {
 		.nav__links {
