--- a/src/scss/modules/_page.scss
+++ b/src/scss/modules/_page.scss
@@ -14,6 +14,7 @@ $Page-Padding:			$Type-LineHeight;
 	min-height: $PAGE-MinHeight-Mob;
 	display: flex;
 	overflow: hidden;
+	// position: relative;
 }
 
 // Elements
